[gd_scene load_steps=4 format=3 uid="uid://cdn2bf5jgyw0y"]

[ext_resource type="Script" uid="uid://b8wibp3lbj1k5" path="res://scripts/multiplayer_menu.gd" id="1_lfgxs"]
[ext_resource type="FontFile" uid="uid://cpwm7d3lrhrkk" path="res://assets/fonts/PixelifySans-Regular.ttf" id="2_lquwl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.901961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.501961)
shadow_size = 5

[node name="MultiplayerMenu" type="CanvasLayer"]
script = ExtResource("1_lfgxs")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 32
text = "Multiplayer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CreateRoomButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 24
text = "Create Room"

[node name="JoinRoomButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 24
text = "Join Room"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RoomCodeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 20
text = "Room Code:"
horizontal_alignment = 1

[node name="RoomCodeInput" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter room code to join"
alignment = 1
max_length = 6

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_lquwl")
theme_override_font_sizes/font_size = 20
text = "Back to Menu"

[connection signal="pressed" from="Panel/VBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/RoomCodeInput" to="." method="_on_room_code_input_submitted"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
